Fix redundant scrollbar for smaller display resolutions

--- a/results-browser/src/FileViewer.css
+++ b/results-browser/src/FileViewer.css
@@ -3,7 +3,7 @@
 }
 
 .file-content {
-    max-height: calc(40vh - 36px);
+    max-height: calc(40vh - 24px);
     overflow: auto;
     padding-top: 12px;
 }
