--- a/results-browser/src/ResultsBrowser.css
+++ b/results-browser/src/ResultsBrowser.css
@@ -1,7 +1,7 @@
 @import "../node_modules/react-keyed-file-browser/dist/react-keyed-file-browser.css";
 
 .results-browser {
-    padding: 24px;
+    padding: 12px;
     display: grid;
     column-gap: 50px;
     align-items: start;
